<resources>
    <string name="app_name">美丽约定商家版</string>
    <string name="action_settings">设置</string>
    <string name="beauty_login">美丽约定登录</string>
    <string name="username">登录名（手机号）</string>
    <string name="password">登录密码</string>
    <string name="login_btn">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="right_menu_homepage">首页</string>
    <string name="right_menu_customer">顾客</string>
    <string name="right_menu_service">服务</string>
    <string name="right_menu_products">商品</string>
    <string name="right_menu_requirements">需求</string>
    <string name="right_menu_talk">飞语</string>
    <string name="right_menu_market">市场</string>
    <string name="right_menu_setting">设置</string>
    <string name="right_menu_exit">退出</string>
    <string name="remind_list">提醒</string>
    <string name="unread_remind">未读提醒</string>
    <string name="remind_title_text">提醒</string>
    <string name="customer_title_text">我的顾客</string>
    <string name="search_customer">搜索</string>
    <string name="order_customer">排序</string>
    <string name="add_new_customer">新增</string>
    <string name="search_customer_text">来搜索你想要找的人吧！</string>
    <string name="search">搜索</string>
    <string name="add_new_customer_basic_title_text">编辑基本信息</string>
    <string name="my_customer_btn">我的顾客</string>
    <string name="all_customer_btn">所有顾客</string>
    <string name="cancel_btn">取消</string>
    <string name="app_list_header_refresh_last_update">上次更新:</string>
    <string name="app_list_header_refresh_down">放开刷新</string>
    <string name="customer_detail_info">详细信息</string>
    <string name="customer_record_info">与我相关的咨询</string>
    <string name="customer_order_info">订单一览</string>
    <string name="customer_fill_info">e-卡详情</string>
    <string name="customer_basic_telephone_title">电话</string>
    <string name="customer_basic_email_title">邮件</string>
    <string name="customer_basic_address_title">地址</string>
    <string name="customer_basic_authorize_title">会员登录手机号</string>
    <string name="customer_basic_info">基本信息</string>
    <string name="edit_customer_basic_info">编辑基本信息</string>
    <string name="edit_customer_record_info">编辑记录</string>
    <string name="add_new_customer_record_info">新增咨询记录</string>
    <string name="customer_record_time">时间</string>
    <string name="customer_record_problem">咨询</string>
    <string name="customer_record_suggestion">建议</string>
    <string name="customer_record_scan_prompt">允许顾客查看</string>
    <string name="customer_vocation_info">专业信息</string>
    <string name="edit_customer_vocation_info">编辑专业信息</string>
    <string name="customer_vocation_question">问题</string>
    <string name="edit_customer_vocation_answer">答案</string>
    <string name="choose_service_body">选择部位</string>
    <string name="choose_service_project">选择项目</string>
    <string name="establish_opportunity_order_info">生成订单和需求</string>
    <string name="establish_opportunity_order_customer">顾客</string>
    <string name="establish_opportunity_order_part_item">详细</string>
    <string name="opportunity_order_num">数量</string>
    <string name="opportunity_order_card">e账户</string>
    <string name="opportunity_order_total_price">原价小计</string>
    <string name="opportunity_order_price">原价</string>
    <string name="order_edit_title_info">编辑订单详情</string>
    <string name="order_edit_time">下单时间</string>
    <string name="order_serial_number">订单编号</string>
    <string name="order_edit_course">课程1</string>
    <string name="order_edit_service_people">服务人员</string>
    <string name="order_edit_contact">联系</string>
    <string name="order_edit_contact_time">联系时间</string>
    <string name="commodity_category">商品类目</string>
    <string name="opportunity_list">与我相关的商机</string>
    <string name="title_commodity_list">商品一览</string>
    <string name="search_commodity_text">来搜索你想要的商品吧！</string>
    <string name="title_commodity_detail">商品详情</string>
    <string name="promotion_contentdescription">商品图片</string>
    <string name="all_opportunity_pop_menu">全部</string>
    <string name="service_opportunity_pop_menu">服务</string>
    <string name="product_opportunity_pop_menu">商品</string>
    <string name="opportunity_detail_sale_progress">进度</string>
    <string name="opportunity_detail_history">进度历史</string>
    <string name="opportunity_detail_create_time">时间</string>
    <string name="opportunity_detail_quantity">数量</string>
    <string name="opportunity_detail_total_price">小计</string>
    <string name="edit_opportunity_progress">编辑销售进度</string>
    <string name="opportunity_progress_name">最新进度</string>
    <string name="opportunity_progress_description">描述</string>
    <string name="edit_progress_description">请填写描述内容</string>
    <string name="opportunity_detail_total_sale_price">成交价</string>
    <string name="opportunity_detail_total_sale_price1">折扣价</string>
    <string name="opportunity_detail_total_discuss">协议价</string>
    <string name="add_new_concact_text">添加新的联系时间</string>
    <string name="choose_order_edit_service_people">请选择服务人员</string>
    <string name="add_new_course_time_text">添加新的治疗时间</string>
    <string name="choose_person_text">选择人员</string>
    <string name="search_person_text">来搜索你想要找的人吧！</string>
    <string name="my_doctor_btn">本店人员</string>
    <string name="all_doctor_btn">所有人员</string>
    <string name="customer_order_list_title_text">所有订单</string>
    <string name="business_order_list_title_text">订单</string>
    <string name="all_order_btn">全部订单</string>
    <string name="has_finished_order_btn">已完成订单</string>
    <string name="has_payment_order_btn">已支付订单</string>
    <string name="un_payment_order_btn">未支付订单</string>
    <string name="has_canceled_order_btn">已取消订单</string>
    <string name="order_detail_title_text">订单详情</string>
    <string name="service_order_detail_status">订单状态</string>
    <string name="treatment_service_detail">操作详情</string>
    <string name="treatment_treatment_detail">操作效果</string>
    <string name="treatment_service_detail_status">状态</string>
    <string name="treatment_service_detail_remark">操作记录</string>
    <string name="eidt_treatment_service_detail">编辑服务详情</string>
    <string name="service_order_contact_detail">联系详情</string>
    <string name="service_order_contact_detail_remark">联系记录</string>
    <string name="edit_service_order_contact_detail">编辑联系详情</string>
    <string name="before_treatment_text">操作前照片</string>
    <string name="treatment_broswer_text">浏览方式</string>
    <string name="after_treatment_text">操作后照片</string>
    <string name="edit_treatment_treatment_detail">操作效果编辑</string>
    <string name="emarketing_title_text">营销</string>
    <string name="send_emarketing_message_title_text">发送营销信息</string>
    <string name="send_marketing_message_time">时间</string>
    <string name="send_marketing_message_to_user">接收人</string>
    <string name="send_marketing_message_content">内容</string>
    <string name="send_marketing_message_content_text">请输入内容</string>
    <string name="emarketing_message_template_titie_text">选择模板</string>
    <string name="template_title">主题</string>
    <string name="template_title_hint">请输入模板主题</string>
    <string name="add_emarketing_message_template_title_text">添加模板信息</string>
    <string name="template_content">内容</string>
    <string name="template_content_hint">请输入内容</string>
    <string name="template_type">消息类型</string>
    <string name="edit_emarketing_message_template_title_text">编辑模板信息</string>
    <string name="fly_message_list_text">飞语</string>
    <string name="fly_message_my_customer">我的顾客</string>
    <string name="fly_message_branch_customer">门店顾客</string>
    <string name="fly_message_company_customer">所有顾客</string>
    <string name="fly_message_cancel_btn">取消</string>
    <string name="hint_new_message">请输入发送的消息</string>
    <string name="setting_title_text">设置</string>
    <string name="app_download_title_text">应用下载</string>
    <string name="personal_message">个人信息</string>
    <string name="app_down">应用下载</string>
    <string name="change_company">门店切换</string>
    <string name="about_us">关于我们</string>
    <string name="software_version">软件版本：V1.01</string>
    <string name="company_website">www.hsquare-tech.com</string>
    <string name="copyright_chinese">汉弘信息科技（上海）有限公司 版权所有</string>
    <string name="copyright_english">Copyright @ 2014 HSquare</string>
    <string name="edit_personal_message_title_text">修改个人信息</string>
    <string name="edit_personal_password">修改密码</string>
    <string name="input_account_text">请输入帐号</string>
    <string name="account_text">帐号</string>
    <string name="edit_personal_password_title_text">密码修改</string>
    <string name="old_password_title">旧密码</string>
    <string name="hint_old_password">输入旧密码</string>
    <string name="new_password_title">新密码</string>
    <string name="hint_new_password">输入新密码</string>
    <string name="confirm_new_password_title">新密码确认</string>
    <string name="hint_new_password_again">再次输入新密码</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="rotate">旋转</string>
    <string name="ecard_title_text">账户</string>
    <string name="ecard_money_out_title_text">账户支出</string>
    <string name="new_customer_ecard_title">e账户</string>
    <string name="ecard_discount">折扣率</string>
    <string name="ecard_balance">余额</string>
    <string name="all_ecard_history">账户交易明细</string>
    <string name="ecard_history">交易明细</string>
    <string name="ecard_money_out">支出</string>
    <string name="ecard_money_in">充值</string>
    <string name="ecard_history_title_text">交易明细</string>
    <string name="add_new_customer_ecard_title_text">账户</string>
    <string name="edit_ecard_balance_title_text">账户充值</string>
    <string name="ecard_recharge_type">充值方式</string>
    <string name="ecard_recharge_number">充值金额</string>
    <string name="plesase_ecard_recharge_number">请输入充值金额</string>
    <string name="ecard_recharge_number_uppercase">大写</string>
    <string name="capture_tip">请将二维码/条形码置于取景框内扫描</string>
    <string name="choose_service_people_title_text">工作时间表</string>
    <string name="report_main_title_text">报表</string>
    <string name="my_report_text">我的报表</string>
    <string name="employee_report_text">员工报表</string>
    <string name="group_report_text">分组报表</string>
    <string name="my_branch_report_text">门店报表</string>
    <string name="all_branch_report_text">各门店报表</string>
    <string name="company_report_text">全公司报表</string>
    <string name="service_and_product_sale_total">服务/商品销售额</string>
    <string name="service_and_product_sale_cash">现金收入</string>
    <string name="customer_remark">备注</string>
    <string name="please_input_customer_remark">请输入备注内容</string>
    <string name="branch_customer_btn">门店顾客</string>
    <string name="order_advanced_search_title_text">订单高级筛选</string>
    <string name="advanced_customer_text">选择顾客</string>
    <string name="advanced_responsible_person_text">美丽顾问</string>
    <string name="advanced_customer_hint_text">全部</string>
    <string name="advanced_order_start_date">开始日期</string>
    <string name="advanced_order_start_date_hint_text">选择开始日期</string>
    <string name="advanced_order_end_date">结束日期</string>
    <string name="advanced_order_end_date_hint_text">选择结束日期</string>
    <string name="select_label_prompt">选择标签</string>
    <string name="order_search_new_all_hint_text">全部</string>
    <string name="ellipsis">...</string>
	<string name="reset_btn_text">重置</string>
	<string name="search_btn_text">筛选</string>
	<string name="designated_responsible_person">指定顾问</string>
	<string name="appointment_time_text">预约时间</string>
	<string name="appointment_time_hint_text">选择时间</string>
	<string name="appointment_service">预约服务</string>
	<string name="choose_appointment_service">选择服务</string>
	<string name="choose_appointment_responsible_person">选择员工</string>
	<string name="isdesignat_appointment_responsible_person">是否指定顾问</string>
	<string name="appointment_create">创建预约</string>
    <string name="clear">清除</string>
</resources>