<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <Button
        android:id="@+id/my_customer_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/my_customer_btn"
        android:textSize="@dimen/text_size" />
    <Button
        android:id="@+id/branch_customer_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/branch_customer_btn" 
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/all_customer_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/all_customer_btn" 
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cancel_btn" 
        android:textSize="@dimen/text_size"/>

</LinearLayout>