<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_backcolor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbarbg" >

        <ImageButton
            android:id="@+id/appointment_create_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/navbar_backbutton"
            android:contentDescription="@string/search" />
    </RelativeLayout>

    <RelativeLayout style="@style/activity_title_layout_attrs" >

        <TextView
            android:id="@+id/appointment_create_title_text"
            style="@style/activity_title_text_attrs"
            android:text="@string/appointment_create" />

        <Button
            android:id="@+id/appointment_create_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@xml/shape_btn_blue"
            android:padding="5dip"
            android:text="@string/reset_btn_text"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TableLayout style="@style/activity_content_table_attrs" >

        <RelativeLayout
            android:id="@+id/appointment_create_customer_relativelayout"
            style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/right_menu_customer" />

            <TextView
                android:id="@+id/appointment_create_customer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:gravity="right"
                android:hint="@string/advanced_customer_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <View style="@style/activity_content_divide_view_attrs" />

        <RelativeLayout
            android:id="@+id/appointment_create_appointment_date_relativelayout"
            style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                android:id="@+id/appointment_create_appointment_date_title"
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/appointment_time_text" />

            <TextView
                android:id="@+id/appointment_create_appointment_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:gravity="right"
                android:hint="@string/appointment_time_hint_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <View style="@style/activity_content_divide_view_attrs" />

        <RelativeLayout style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                android:id="@+id/appointment_service_title"
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/appointment_service" />

            <TextView
                android:id="@+id/appointment_service_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:gravity="right"
                android:hint="@string/choose_appointment_service"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </TableLayout>

    <TableLayout style="@style/activity_content_table_attrs" >

        <RelativeLayout style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/isdesignat_appointment_responsible_person" />

            <TextView
                android:id="@+id/isdesignat_appointment_responsible_person_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:gravity="right"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <View style="@style/activity_content_divide_view_attrs" />

        <RelativeLayout
            android:id="@+id/designated_responsible_person_relativelayout"
            style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                android:id="@+id/designated_responsible_person_title"
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/designated_responsible_person" />

            <TextView
                android:id="@+id/designated_responsible_person_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:gravity="right"
                android:hint="@string/choose_appointment_responsible_person"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </TableLayout>

    <TableLayout style="@style/activity_content_table_attrs" >

        <RelativeLayout style="@style/activity_content_table_relativelayout_attrs" >

            <TextView
                style="@style/activity_content_table_row_title_attrs"
                android:text="@string/customer_remark" />
        </RelativeLayout>

        <View style="@style/activity_content_divide_view_attrs" />

        <RelativeLayout style="@style/activity_content_table_relativelayout_attrs" >

            <EditText
                android:id="@+id/appointment_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:background="@null"
                android:hint="@string/please_input_customer_remark"
                android:maxLength="300"
                android:minLines="3"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/order_search_new_make_sure_btn"
                style="@style/submit_big_btn"
                android:text="@string/ok"
                 />
        </RelativeLayout>
    </TableLayout>
   </LinearLayout>
  </ScrollView>
</LinearLayout>