<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_backcolor"
    android:orientation="vertical"
    tools:context=".OrderAdvancedSearchActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbarbg" >

        <ImageButton
            android:id="@+id/order_advanced_search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/navbar_backbutton"
            android:contentDescription="@string/search" />
    </RelativeLayout>

    <RelativeLayout style="@style/activity_title_layout_attrs" >

        <TextView
            android:id="@+id/order_advanced_search_title_text"
            style="@style/activity_title_text_attrs"
            android:text="@string/order_advanced_search_title_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_label"
        style="@style/activity_content_divide_view_attrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_label_prompt"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/serach_label_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/advanced_customer_hint_text"
            android:maxWidth="250dip"
            android:singleLine="true"
            android:text="@string/ellipsis"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <View
        android:id="@+id/layout_label_divide_view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/border_color" >
    </View>

    <RelativeLayout
        android:id="@+id/layout_responsible_person"
        style="@style/activity_content_table_relativelayout_attrs"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/advanced_responsible_person_text"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/advanced_responsible_person_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:hint="@string/order_search_new_all_hint_text"
            android:maxWidth="250dip"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <View
        android:id="@+id/layout_customer_divide_view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/border_color" >
    </View>

    <RelativeLayout
        android:id="@+id/layout_customer"
        style="@style/activity_content_table_relativelayout_attrs"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/advanced_customer_text"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/advanced_customer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/advanced_customer_hint_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/border_color" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_start_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:id="@+id/advanced_order_start_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/advanced_order_start_date"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/advanced_order_start_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:hint="@string/advanced_order_start_date_hint_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="80dp"
            android:background="@color/border_color" >
        </View>

        <RelativeLayout
            android:id="@+id/layout_end_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:id="@+id/advanced_order_end_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/advanced_order_end_date"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/advanced_order_end_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:hint="@string/advanced_order_end_date_hint_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dip"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/advanced_search_reset_btn"
            style="@style/search_reset_btn"
            android:layout_weight="1"
            android:text="@string/reset_btn_text" />

        <Button
            android:id="@+id/advanced_search_make_sure_btn"
            style="@style/search_btn"
            android:layout_weight="1"
            android:text="@string/search_btn_text" />
    </LinearLayout>

</LinearLayout>