<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    android:orientation="vertical"
    tools:context=".AccountAttendanceActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >
        <Button
            android:id="@+id/tablet_cancel"
            style="@style/search_reset_btn"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/tablet_clear"
            style="@style/search_reset_btn"
            android:layout_weight="1"
            android:text="@string/clear" />
		<Button
            android:id="@+id/tablet_ok"
            style="@style/search_btn"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/ok" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tablet_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>